--- a/requirements.txt
+++ b/requirements.txt
@@ -2,19 +2,38 @@ alembic==1.15.2
 blinker==1.9.0
 click==8.1.8
 colorama==0.4.6
+contourpy==1.3.0
+cycler==0.12.1
 flask==3.1.0
 Flask-Login==0.6.3
 Flask-Migrate==4.1.0
 flask-sqlalchemy==3.1.1
 flask-wtf==1.2.2
+fonttools==4.57.0
 greenlet==3.2.0
 importlib-metadata==8.6.1
+importlib-resources==6.5.2
 itsdangerous==2.2.0
 jinja2==3.1.6
+joblib==1.5.0
+kiwisolver==1.4.7
 mako==1.3.10
 MarkupSafe==3.0.2
+matplotlib==3.9.4
+numpy==2.0.2
+packaging==25.0
+pandas==2.2.3
+pillow==11.2.1
+pyparsing==3.2.3
+python-dateutil==2.9.0.post0
+pytz==2025.2
+scikit-learn==1.6.1
+scipy==1.13.1
+six==1.17.0
 sqlalchemy==2.0.40
+threadpoolctl==3.6.0
 typing-extensions==4.13.2
+tzdata==2025.2
 werkzeug==3.1.3
 wtforms==3.2.1
 zipp==3.21.0
