--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,9 @@
 ../../__pycache__/routes.cpython-312.pyc
 ../../set_api_key.py
 __pycache__/
-../../.env
-../../set_api_key.py
+.DS_Store
+app/.env
+app/env.zip
+app/plotting/
+app/set_api_key.py
+app/unit_test/LinearR·egression_test.py
