--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-../../.env
+.env
 ../../__pycache__/__init__.cpython-311.pyc
 ../../__pycache__/__init__.cpython-312.pyc
 ../../__pycache__/forms.cpython-312.pyc
