--- a/requirements.txt
+++ b/requirements.txt
@@ -1,40 +1,66 @@
 alembic==1.15.2
+annotated-types==0.7.0
+anyio==4.9.0
+attrs==25.3.0
 blinker==1.9.0
+certifi==2025.4.26
 click==8.1.8
 colorama==0.4.6
 contourpy==1.3.0
 cycler==0.12.1
-flask==3.1.0
+distro==1.9.0
+exceptiongroup==1.3.0
+Flask==3.1.0
 Flask-Login==0.6.3
 Flask-Migrate==4.1.0
-flask-sqlalchemy==3.1.1
-flask-wtf==1.2.2
+Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.2
 fonttools==4.57.0
 greenlet==3.2.0
-importlib-metadata==8.6.1
-importlib-resources==6.5.2
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+idna==3.10
+importlib_metadata==8.6.1
+importlib_resources==6.5.2
 itsdangerous==2.2.0
-jinja2==3.1.6
+Jinja2==3.1.6
+jiter==0.9.0
 joblib==1.5.0
 kiwisolver==1.4.7
-mako==1.3.10
+Mako==1.3.10
 MarkupSafe==3.0.2
 matplotlib==3.9.4
 numpy==2.0.2
+openai==1.78.1
+outcome==1.3.0.post0
 packaging==25.0
 pandas==2.2.3
 pillow==11.2.1
+pydantic==2.11.4
+pydantic_core==2.33.2
 pyparsing==3.2.3
+PySocks==1.7.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
 pytz==2025.2
 scikit-learn==1.6.1
 scipy==1.13.1
+selenium==4.32.0
 six==1.17.0
-sqlalchemy==2.0.40
+sniffio==1.3.1
+sortedcontainers==2.4.0
+SQLAlchemy==2.0.40
 threadpoolctl==3.6.0
-typing-extensions==4.13.2
+tqdm==4.67.1
+trio==0.30.0
+trio-websocket==0.12.2
+typing-inspection==0.4.0
+typing_extensions==4.13.2
 tzdata==2025.2
-werkzeug==3.1.3
-wtforms==3.2.1
+urllib3==2.4.0
+websocket-client==1.8.0
+Werkzeug==3.1.3
+wsproto==1.2.0
+WTForms==3.2.1
 zipp==3.21.0
