--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,6 @@
 ../../__pycache__/routes.cpython-312.pyc
 ../../set_api_key.py
 __pycache__/
-../../.env
 ../../set_api_key.py
+instance/database.db
+
